--- a/src/style.css
+++ b/src/style.css
@@ -194,3 +194,28 @@ $social: twitter, facebook, youtube;
     color:red;
     font-size: 18px;
 }
+
+/* Testing postcss-crip*/
+.crip-demo{
+    w:100px;
+    pos:absolute;
+    p:0;
+    m:0;
+}
+
+/* Testing postcss-alias*/
+@alias{
+    my-width: width;
+    my-position: position;
+    my-border: border;
+}
+.alias-test{
+    my-width: 100px;
+    my-position: absolute;
+    my-border: 1px solid red;
+}
+
+/* Testing font*/
+.font-test{
+    font:"Indie Flower"
+}
